modifiqué horarios con BS

--- a/workshops.html
+++ b/workshops.html
@@ -33,47 +33,58 @@
         <br>
     </nav>
 
+    <header>
+        <img  class="imagenApertura" src="img/fotoWorkshop.jpg" alt="arrancando la clase con el mat">
+            <br>
+            <br>
+    </header>
+
     <br>
     <br>
 
-<div style="text-align:center;">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/gfVN99npkOo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
 
 
     <!-- main -->
     <main>
-        <br>
-        <br>
-        <h1 id="seccion_chica">NUESTROS WORKSHOPS</h1>
+            <br>
+            <br>
+        <h1 id="seccion_chica">NUESTROS <strong>WORKSHOPS</strong></h1>
         <hr color=#FFA800 size=4 width="77">
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad magni repudiandae facilis exercitationem voluptates et nemo. Laborum aliquam possimus distinctio nesciunt? Sed, vitae ipsa. Quasi, nemo ipsum nulla expedita sequi dolorem velit doloremque odit maiores repellendus, blanditiis veritatis. Ipsum accusamus consequuntur hic molestias magni! Quo excepturi, nostrum corrupti esse rerum quisquam eveniet error provident rem debitis mollitia expedita animi, facere nobis doloribus reprehenderit dolores, corporis facilis vel dolorum? Cumque voluptatibus nemo adipisci natus, voluptates minus fugiat nobis ab modi et. A, adipisci dolor? Tenetur voluptates repellendus aspernatur quidem. Placeat soluta voluptate cumque nostrum provident autem earum, voluptatibus vitae officia fuga repellendus illo similique aperiam adipisci, veniam sit nam sed repellat, non porro! Quasi sed deleniti vero tempora quibusdam expedita rem molestias dolorum odio doloremque ut, excepturi eaque amet modi accusantium error ab recusandae provident quisquam, itaque placeat. Corrupti, mollitia adipisci veniam, sed obcaecati dolore similique itaque beatae ex, molestias minus iure corporis vitae. Nobis ratione aliquam error fugit. Optio libero deleniti dolores excepturi distinctio quaerat illum omnis fuga repudiandae, tempore reprehenderit incidunt, consectetur quae voluptates rem odit sit. Optio ea eos autem nostrum blanditiis odio rerum, ipsa fugit consectetur dignissimos qui in neque doloremque exercitationem consequuntur, ducimus laborum vitae molestias voluptate vel quas voluptates iusto quaerat iure. Cupiditate similique distinctio error nobis consequatur aperiam, temporibus laboriosam expedita beatae pariatur doloribus necessitatibus eaque minima deserunt harum eveniet totam perspiciatis eius labore quidem eligendi rem. Quas, autem molestiae. Libero, incidunt distinctio excepturi aliquam, animi quod harum blanditiis qui dignissimos quaerat corrupti adipisci.</p>
-        <br>
-        <br>
-
-<div style="text-align:center;">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/V3K0mTdNf5w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-
+            <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad magni repudiandae facilis exercitationem voluptates et nemo. Laborum aliquam possimus distinctio nesciunt? Sed, vitae ipsa. Quasi, nemo ipsum nulla expedita sequi dolorem velit doloremque odit maiores repellendus, blanditiis veriovident rem debitis mollitia expedita animi, facere nobis doloribus reprehenderit dolores, corporis facilis vel dolorum? Cumque voluptatibus nemo adipisci natus, voluptates minus fugiat nobis ab modi et. A, adipisci dolor? Tenetur voique distinctio error nobis consequatur aperiam, temporibus laboriosam expedita beatae pariatur doloribus necessitatibus eaque minima deserunt harum eveniet totam perspiciatis eius labore quidem eligendi rem. Quas, autem molestiae. Libero, incidunt distinctio excepturi aliquam, animi quod harum blanditiis qui dignissimos quaerat corrupti adipisci.</p>
         <br>
         <br>
 
-        <h2 id="seccion_mediana">LINO MIELE 2020</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti eum perferendis delectus officia? Nobis, tempora vero? tate nesciunt mollitia unde, illo voluptatibus est esse, excepturi quo repellendus ad consequatur saepe, quos nihil optio ex! Aperiam distinctio, magni voluptas numquam eum facere sunt nam magnam quo, est tempore ducimus, fuga molestias neque labore esse eveniet quidem rerum dolorum sapiente perspiciatis reiciendis? Enim dolorem ducimus pariatur ratione illo laboriosam ipsum autem accusantium perspiciatis accusamus. Ad repudiandae sint hic, odio dolor aliquam aut. Cupiditate veritatis non eligendi autem, fuga, dolorem beatae iusto odit animi nisi officiis iure, doloribus soluta voluptates qui illum nulla corporis delectus excepturi. Nobis neque doloremque a dolorem sapiente totam mollitia repudiandae quas perferendis ex. Id error deleniti debitis, architecto totam recusandae necessitatibus sunt a fugiat tempore tenetur doloribus veniam at veritatis porro eius, soluta, facilis nihil sit dicta dolor eos. Fuga debitis quia quam atque, qui ex error, voluptas unde nam consequatur earum voluptates mollitia aliquam numquam, saepe cupiditate doloremque blanditiis maiores nostrum ut quidem veritatis repellendus quaerat officia. A modi illum fugit, ipsa rerum ea neque doloribus nemo fuga quia perferendis facilis vitae, maiores corrupti! Facilis, voluptas assumenda corrupti quasi reprehenderit dolore fugit cumque esse illo, deserunt ipsam consectetur officia commodi hic distinctio, fuga perspiciatis et? Distinctio, quae minus voluptatibus tempore laboriosam, a, fuga sint tenetur quas amet sequi odit perferendis qui praesentium labore omnis vitae? Perferendis quaerat, animi consectetur cumque laudaectus nisi nulla quidem, saepe soluta veritatis.</p>
-        <br>
-        <br>
+        <hr color=#FFA800 size=4px width="77px">
+            <br>
+            <br>
 
-    <div style="text-align:center;">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dDWiD-JuNwQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+        <h2 id="seccion_mediana">LINO MIELE <strong>2020</strong> </h2>
+            <<br>
+        <p>Lorem ipsum dolor sit amet coolorem beatae iusto odit animi nisi officiis iure, doloribus soluta voluptates qui illum nulla corporis delectus excepturluptas assumenda corrupti quasi reprehenderit dolore fugit cumque esse illo, deserunt ipsam consectetur officia commodi hic distinctio, fuga perspiciatis et? Distinctio, quae minus voluptatibus tempore laboriosam, a, fuga sint tenetur quas amet sequi odit perferendis qui praesentium labore omnis vitae? Perferendis quaerat, animi consectetur cumque laudaectus nisi nulla quidem, saepe soluta veritatis.</p>
+            <br>
+            <br>
 
-        <br>
-        <br>
-        <h2 id="seccion_grande">LINO MIELE 2019</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur aspernatur facilis natus sequi labore unde suscipit esse excepturi accusamus rem, id quas totam fugiat fugit ad reprehenderit et vero hic voluptates nulla dolorem? Laudantium dolore aut eveniet, sapiente dicta quia? Temporibus quas eos libero dicta at voluptate quam atque perferendis, quar a minus et, est nulla nobis excepturi modi accusamus dolor eligendi odio ad minima asperiores. Dignissi vitae hic consequatur nemo aliquam labore harum? Rerum, nesciunt voluptates quibusdam rem quas minima deleniti voluptatibus, aspernatur nam corporis saepe quae natus quasi voluptatem! Esse neque quibusdam quidem quo ipsa illo sapiente aperiam, aspernatur unde beatae, eius accusamus. Fugiat officiis id iure at pariatur voluptate, assumenda sit aliquam alias quas voluptatum autem dolor ipsa, natus nesciunt repudiandae doloremque? Dicta recusandae, non tempore aliquid, repellat nulla dolores ipsam iusto illo repellendus nihil eos? Odit quo nam eaque?</p>
-        <br>
-        <br>
+        <div style="text-align:center;">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/V3K0mTdNf5w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
+  
+    <hr color=#FFA800 size=4 width="77">
+            <br>
+            <br>
+        <h2 id="seccion_grande">LINO MIELE <strong> 2019</strong></h2>
+            <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur aspernatur facilis natus sequi labore unde suscipit esse excepturi accusamus rem, id quas quibusdam quidem quo ipsa illo sapiente aperiam, aspernatur unde beatae, eius accusamus. Fugiat officiis id iure at pariatur voluptate, assumenda sit aliquam alias quas voluptatum autem dolor ipsa, natus nesciunt repudiandae doloremque? Dicta recusandae, non tempore aliquid, repellat nulla dolores ipsam iusto illo repellendus nihil eos? Odit quo nam eaque?</p>
+            <br>
+            <br>
+        <div style="text-align:center;">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/dDWiD-JuNwQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
+        <hr color=#FFA800 size=4 width="77">
+            <<br>
+
     </main>
 
     <!-- footer -->
