cambie nobre escuela y su foto

--- a/la_escuela.html
+++ b/la_escuela.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="La Escuela Ahtanga Yoga BA">
+    <meta name="description" content="Escuela Yoga BA sus maestros y su historia, Lino Miele, Andrea MArtínez">
     <meta name="keywords" content="Andrea martinez, Lino Miele, yoga, ashtanga,  escuela yoga, clases de yoga">
 
-    <title>La escuela</title>
+    <title>La escuela Ashtanga Yoga BA</title>
    <!-- Link Css -->
     <link rel="stylesheet" href="css/estilos.css"/>
     <!-- Link font Montserrat -->
@@ -22,7 +22,7 @@
         <img src="img/logo header manos y pies.jpg" alt="logo">
         <a href="index.html"> <h3> ASHTANGA YOGA BA . </h3>
         <ul>             
-            <li><a href="La_escuela.html">La escuela</a></li>
+            <li><a href="la_escuela.html">La escuela</a></li>
             <li><a href="workshops.html">Workshops</a>
                 <ul>
                  <li><a href="workshops.html">Lino Miele 2020</a></li>
@@ -37,7 +37,7 @@
 
     <!-- HEADER-->
     <header>
-        <img  class="imagenApertura" src="img/Andrea_Lino.jpg" alt="Andrea´martinez y Lino Mile abrazados">
+        <img  class="imagenApertura" src="img/andrea_lino.jpg" alt="Andrea Martinez y Lino Miele abrazados">
         <br>
         <br>
         <img width="200" class="logoashtangaBA" src="img/manos y pies RGB en 72 dpi.jpg" alt="logo de la sala">
