camie la escuela

--- a/la_escuela.html
+++ b/la_escuela.html
@@ -37,7 +37,7 @@
 
     <!-- HEADER-->
     <header>
-        <img  class="imagenApertura" src="img/andrea_lino.jpg" alt="Andrea Martinez y Lino Miele abrazados">
+        <img  class="imagenApertura" src="img/AndreaLino.jpg" alt="Andrea Martinez y Lino Miele abrazados">
         <br>
         <br>
         <img width="200" class="logoashtangaBA" src="img/manos y pies RGB en 72 dpi.jpg" alt="logo de la sala">
