--- a/tienda.html
+++ b/tienda.html
@@ -21,7 +21,7 @@
         <img src="img/logo header manos y pies.jpg" alt="logo">
         <a href="index.html"> <h3> ASHTANGA YOGA BA . </h3>
         <ul>             
-            <li><a href="La_escuela.html">La escuela</a></li>
+            <li><a href="la_escuela.html">La escuela</a></li>
             <li><a href="workshops.html">Workshops</a>
                 <ul>
                  <li><a href="workshops.html">Lino Miele 2020</a></li>
