--- a/horarios.html
+++ b/horarios.html
@@ -43,14 +43,18 @@
             <li class="nav-item">
               <a class="nav-link" href="horarios.html">Horarios</a>
             </li>
+             <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="tienda.html">Tienda Yoga</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="workshops.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Workshops
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="workshops.html">Workshop 2020</a></li>
-                <li><a class="dropdown-item" href="workshops.html">Workshop 2019</a></li>
-                <li><a class="dropdown-item" href="workshops.html">Workshop 2018</a></li>
+                <li><a class="dropdown-item" href="workshops.html">Workshop 2021</a></li>
+                <li><a class="dropdown-item" href="workshops.html #wsh2020">Workshop 2020</a></li>
+                <li><a class="dropdown-item" href="workshops.html #wsh2019">Workshop 2019</a></li>
+                <li><a class="dropdown-item" href="workshops.html #wsh2018">Workshop 2018</a></li>
               </ul>
             </li>
           </ul>
@@ -173,14 +177,22 @@
 
         <br>
         <br>
-        <!-- footer -->
-        <footer>
+       
+<!-- footer -->
+    <footer>
+
+        <div class="fondoFooter tipoBlanca"> Ashtanga Yoga BA
+            <br>
+          Charlone 155, Buenos Aires  
+        </div>
+
         <ul class="fondoFooter">
-            <li>Mail</li>
-            <li>Facebook</li>
-            <li>Instagram</li>
-            <li>Twitter</li>
+            <li class="h3"><a href="http://www.facebook.com/ashtangaba">Facebook /</a></li>  
+            <li class="h3"><a href="https://www.instagram.com/ashtangaba/?hl=es-la"> Instagram</a></li>
         </ul>
+
     </footer>
+
+
 </body>
 </html>
