para subir a host

--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@
 <!-- Fin barra de navegación -->
     
     <header>
-        <img  class="imagenApertura" src="img/salaYogaBurko.jpg" alt="sala yoga vacia">
+        <img  class="imagenApertura" src="img/salaYogaBurkoOk.jpg" alt="sala yoga vacia">
             <br>
             <br>
-        <img width="200" class="logoashtangaBA" src="img/manos y pies RGB en 72 dpi.jpg" alt="logo de la sala">
             <br>
         <h1 class="letraAmplia"> ASHTANGA <strong>YOGA</strong> BA </h1>
+            <br>
+
+        <img width="200" class="logoashtangaBA" src="img/manos y pies RGB en 72 dpi.jpg" alt="logo de la sala">
             <br>
         <hr size="6px">
             <br>
@@ -119,13 +121,14 @@
             <br>
 
         <section class="contenedorGaleria">
-            <img class="img" src="img/foto1.jpg" alt="workshop con Lino Miele" >  
-            <img class="img" src="img/foto2.jpg" alt="foto practica en clase" > 
-            <img class="img" src="img/foto3.jpg" alt="foto relajacion" >  
-            <img class="img" src="img/foto4.jpg" alt="tocando ukelele fiesta fin de año" >  
-            <img class="img" src="img/foto5.jpg" alt="Andrea Martinez en clase" >  
-            <img class="img" src="img/foto6.jpg" alt="Envolviendo mat" >  <img class="img" src="img/foto7.jpg" alt="meditacion" >  
-            <img class="img" src="img/foto8.jpg" alt="Gonzalo Lugones en clase" > 
+            <img class="trans" src="img/foto1.jpg" alt="workshop con Lino Miele" >  
+            <img class="trans" src="img/foto2.jpg" alt="foto practica en clase" > 
+            <img class="trans" src="img/foto3.jpg" alt="foto relajacion" >  
+            <img class="trans" src="img/foto4.jpg" alt="tocando ukelele fiesta fin de año" >  
+            <img class="trans" src="img/foto5.jpg" alt="Andrea Martinez en clase" >  
+            <img class="trans" src="img/foto6.jpg" alt="Envolviendo mat" >  
+            <img class="trans" src="img/foto7.jpg" alt="meditacion" >  
+            <img class="trans" src="img/foto8.jpg" alt="Gonzalo Lugones en clase" > 
         </section>
     </main>
 
@@ -222,8 +225,8 @@
         </div>
 
         <ul class="fondoFooter">
-            <li class="h3"><a href="http://www.facebook.com/ashtangaba">Facebook /</a></li>  
-            <li class="h3"><a href="https://www.instagram.com/ashtangaba/?hl=es-la"> Instagram</a></li>
+            <li class="h4"><a href="http://www.facebook.com/ashtangaba">FACEBOOK /</a></li>  
+            <li class="h4"><a href="https://www.instagram.com/ashtangaba/?hl=es-la"> INSTAGRAM</a></li>
         </ul>
 
     </footer>
