casi todo terminado sin galery

--- a/la_escuela.html
+++ b/la_escuela.html
@@ -74,29 +74,29 @@
     <!-- main -->
     <main>
         <br>
-        <h2>QUIÉNES <strong>SOMOS</strong></h2>
+        <h2 class="titulos">QUIÉNES <strong>SOMOS</strong></h2>
             <br>
-            <hr color=#FFA800 size=4 width="77">
+            <hr size="4px">
             <br>
             <br>
-        <p>Ashtanga Yoga BA es una escuela de yoga supervisada por <strong>Andrea Martínez</strong> y dirigida por el maestro <strong>Lino Miele</strong>. 
+        <p class="textoParrafo">Ashtanga Yoga BA es una escuela de yoga supervisada por <strong>Andrea Martínez</strong> y dirigida por el maestro <strong>Lino Miele</strong>. 
         El grupo de profesores de la escuela se fue formando naturalmente; en la actualidad el equipo está formado por quienes fueron alumnos de Andrea por muchos años y que continúan su formación con Lino Miele.
         </p>
         <img width="200" class="logoashtangaBA" src="img/manos y pies RGB en 72 dpi.jpg" alt="logo de la sala">
         <br>
-        <hr color=#FFA800 size=4 width="77">
+        <hr size="4px">
         <br>
         <br>
-        <h2>Andrea Martínez</h2>
+        <h2 class="titulos">Andrea Martínez</h2>
         <br>
-        <p>Andrea Martínez se inició en la práctica de Hatha Yoga a los 15 años y se mantuvo en ese camino por varios años. Sin embargo, fue cuando conoció a su maestro, Lino Miele, en su primer viaje a India en 1998, cuando su vida y su forma de enseñanza dieron un vuelco absoluto. Apasionada con el método desde un principio, volvió a practicar con Lino Miele en Kóvalam por tres temporadas más y, en cada regreso a Buenos Aires, trabajó con esfuerzo para difundir el Ashtanga Yoga en la capital y otras provincias del país. Paralelamente, asistió a workshops con Eddie Stern (Nueva York) y Matthew Vollmer (Río de Janeiro).</p>
+        <p class="textoParrafo">Andrea Martínez se inició en la práctica de Hatha Yoga a los 15 años y se mantuvo en ese camino por varios años. Sin embargo, fue cuando conoció a su maestro, Lino Miele, en su primer viaje a India en 1998, cuando su vida y su forma de enseñanza dieron un vuelco absoluto. <strong>Apasionada</strong> con el método desde un principio, volvió a <sreong>practicar</sreong> con Lino Miele en Kóvalam por tres temporadas más y, en cada regreso a Buenos Aires, trabajó con esfuerzo para <strong>difundir</strong> el Ashtanga Yoga en la capital y otras provincias del país. Paralelamente, asistió a workshops con Eddie Stern (Nueva York) y Matthew Vollmer (Río de Janeiro).</p>
         <br>
         <br>
-        <hr color=#FFA800 size=4 width="77">
+        <hr size="4px">
         <br>
-        <h2>Lino Miele</h2>
+        <h2 class="titulos">Lino Miele</h2>
         <br>
-        <p>Lino es el fundador de cinco Escuelas de Yoga Astanga en Helsinki (1997), Roma (2000), Copenhague (2000), Milán (2009), Buenos Aires (2009) y Montana (2013) que visita anualmente y donde realiza <strong>talleres y retiros</strong> de verano. El taller más largo tiene lugar en el centro de Lino en Kovalam Beach, donde enseña durante dos meses al año.
+        <p class="textoParrafo">Lino es el fundador de cinco Escuelas de Yoga Astanga en Helsinki (1997), Roma (2000), Copenhague (2000), Milán (2009), Buenos Aires (2009) y Montana (2013) que visita anualmente y donde realiza <strong>talleres y retiros</strong> de verano. El taller más largo tiene lugar en el centro de Lino en Kovalam Beach, donde enseña durante dos meses al año.
         Lino ha estado de gira y enseñando durante más de una década. Es amado, respetado y reconocido por su forma inflexible de transmitir el método tradicional de yoga Ashtanga.</p>
         <br>
         <br>
