--- a/workshops.html
+++ b/workshops.html
@@ -77,11 +77,11 @@
     <!-- main -->
     <main>
             <br>
-        <h2 id="seccion_chica">NUESTROS <strong>WORKSHOPS</strong></h2>
+        <h2 class="titulos">NUESTROS <strong>WORKSHOPS</strong></h2>
         <hr color=#FFA800 size=4 width="77">
             <br>
 
-        <p>YA PODÉS ANOTARTE EN EL WORKSHOP 2021
+        <p class="textoParrafo">YA PODÉS ANOTARTE EN EL WORKSHOP 2021
             <br>
             Del 23 de octubre al 1 de noviembre de 2021. 
             <br>
@@ -102,9 +102,9 @@
             <br>
 
 
-        <h2 id="seccion_mediana">LINO MIELE <strong>2020</strong> </h2>
+        <h2 class="titulos">LINO MIELE <strong>2020</strong> </h2>
             <<br>
-        <p>Este workshop se dedicó exclusivamente a grupo de avanzados debido a la pandemia, fue en el barrio de Palermo en la Ciudad de Buenos Aires, duro cinco días y se fimó en vivo para compartirlo por zoom.</p>
+        <p class="textoParrafo">Este workshop se dedicó exclusivamente a grupo de avanzados debido a la pandemia, fue en el barrio de Palermo en la Ciudad de Buenos Aires, duro cinco días y se fimó en vivo para compartirlo por zoom.</p>
             <br>
             <br>
 
@@ -114,20 +114,20 @@
 
     <a name="wsh2019" id="wsh2019"></a>    
   
-    <hr color=#FFA800 size=4 width="77">
+    <hr size="4px">
             <br>
             <br>
 
-        <h2 id="seccion_grande">LINO MIELE <strong> 2019</strong></h2>
+        <h2 class="titulos">LINO MIELE <strong> 2019</strong></h2>
             <br>
-        <p>El workshops con más alumnos que haya tenido Lino Miele, Fueron cinco días. Grupos avanzados por la mañana y principiantes por la tarde. Como cierre final se armó un retiro de  tres días en el campo con todos los grupos juntos.</p>
+        <p class="textoParrafo">El workshops con más alumnos que haya tenido Lino Miele, Fueron cinco días. Grupos avanzados por la mañana y principiantes por la tarde. Como cierre final se armó un retiro de  tres días en el campo con todos los grupos juntos.</p>
             <br>
             <br>
         <div style="text-align:center;">
            <iframe width="560" height="315" src="https://www.youtube.com/embed/vodwzBgg8WA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
-        <hr color=#FFA800 size=4 width="77">
+       <hr size="4px">
             <<br>
 
 
@@ -135,9 +135,9 @@
   
             <br>
         
-        <h2 id="seccion_grande">LINO MIELE <strong> 2018</strong></h2>
+        <h2 class="titulos" >LINO MIELE <strong> 2018</strong></h2>
             <br>
-        <p>Primera experiencia de Lino en Buenos Aires donde surgió el amor entre los alumnos y Lino, quien enamorado de la Argentina volvió cada año. Se desarrolló en Palermo en sala cerrada y al aire libre</p>
+        <p class="textoParrafo">Primera experiencia de Lino en Buenos Aires donde surgió el amor entre los alumnos y Lino, quien enamorado de la Argentina volvió cada año. Se desarrolló en Palermo en sala cerrada y al aire libre</p>
             <br>
             <br>
         <div style="text-align:center;">
@@ -148,7 +148,7 @@
         
         </div>
 
-        <hr color=#FFA800 size=4 width="77">
+        <hr size="4px">
             <<br>
 
 
