todo listo menos 404

--- a/horarios.html
+++ b/horarios.html
@@ -37,7 +37,7 @@
               <a class="nav-link active" aria-current="page" href="la_escuela.html">La escuela</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Index.html #Contacto">Contacto</a> <!--FORMULARIO-->
+              <a class="nav-link" href="index.html #Contacto">Contacto</a> <!--FORMULARIO-->
 
             </li>
             <li class="nav-item">
