--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <a class="nav-link active" aria-current="page" href="la_escuela.html">La escuela</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#Contacto">Contacto</a> <!--FORMULARIO-->
+              <a class="nav-link" href="#contacto">Contacto</a> <!--FORMULARIO-->
 
             </li>
             <li class="nav-item">
@@ -139,7 +139,7 @@
    
             <br>
             <br>
-        <a name="Contacto" id="Contacto"></a> 
+        <a name="Contacto" id="contacto"></a> 
         
         
          <h2 class="titulos">CONTACTO</h2>
